CHANGELOG
---------
* Wed Apr 13 2011 Tom G. Christensen <irixpkg@jupiterrise.com> - 2.8.2-1
- Update to 2.8.2