@@ -1,4 +1,7 @@
 CHANGELOG
 ---------
+* Sun May 15 2011 Tom G. Christensen <irixpkg@jupiterrise.com> - 2.8.2-2
+- Build with SGI cc
+
 * Wed Apr 13 2011 Tom G. Christensen <irixpkg@jupiterrise.com> - 2.8.2-1
 - Update to 2.8.2
